// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Spartacus Customer Ticketing schematics: ng-add Customer Ticketing feature eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { I18nConfig, provideConfig } from "@spartacus/core";
import { CustomerTicketingModule } from "@spartacus/customer-ticketing";
import { customerTicketingTranslationChunksConfig, customerTicketingTranslationsEn } from "@spartacus/customer-ticketing/assets";
import { CustomerTicketingRootModule } from "@spartacus/customer-ticketing/root";

@NgModule({
  declarations: [],
  imports: [
    CustomerTicketingRootModule,
    CustomerTicketingModule
  ],
  providers: [provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: customerTicketingTranslationsEn },
      chunks: customerTicketingTranslationChunksConfig,
    },
  })]
})
export class CustomerTicketingFeatureModule { }
"
`;

exports[`Spartacus Customer Ticketing schematics: ng-add Customer Ticketing feature general setup should add the feature using the lazy loading syntax 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, I18nConfig, provideConfig } from "@spartacus/core";
import { customerTicketingTranslationChunksConfig, customerTicketingTranslationsEn } from "@spartacus/customer-ticketing/assets";
import { CUSTOMER_TICKETING_FEATURE, CustomerTicketingRootModule } from "@spartacus/customer-ticketing/root";

@NgModule({
  declarations: [],
  imports: [
    CustomerTicketingRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [CUSTOMER_TICKETING_FEATURE]: {
        module: () =>
          import('@spartacus/customer-ticketing').then((m) => m.CustomerTicketingModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: customerTicketingTranslationsEn },
      chunks: customerTicketingTranslationChunksConfig,
    },
  })
  ]
})
export class CustomerTicketingFeatureModule { }
"
`;

exports[`Spartacus Customer Ticketing schematics: ng-add Customer Ticketing feature general setup styling should create a proper scss file 1`] = `
"@import "../../styles-config";
@import "@spartacus/customer-ticketing";
"
`;

exports[`Spartacus Customer Ticketing schematics: ng-add Customer Ticketing feature general setup styling should update angular.json 1`] = `
"{
  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
  "version": 1,
  "newProjectRoot": "",
  "projects": {
    "schematics-test": {
      "projectType": "application",
      "schematics": {
        "@schematics/angular:component": {
          "style": "scss",
          "standalone": false,
          "type": "component",
          "addTypeToClassName": false
        },
        "@schematics/angular:directive": {
          "standalone": false,
          "type": "directive",
          "addTypeToClassName": false
        },
        "@schematics/angular:pipe": {
          "standalone": false,
          "typeSeparator": "."
        },
        "@schematics/angular:service": {
          "type": "service",
          "addTypeToClassName": false
        },
        "@schematics/angular:guard": {
          "typeSeparator": "."
        },
        "@schematics/angular:interceptor": {
          "typeSeparator": "."
        },
        "@schematics/angular:module": {
          "typeSeparator": "."
        },
        "@schematics/angular:resolver": {
          "typeSeparator": "."
        }
      },
      "root": "",
      "sourceRoot": "src",
      "prefix": "app",
      "architect": {
        "build": {
          "builder": "@angular/build:application",
          "options": {
            "browser": "src/main.ts",
            "polyfills": [
              "zone.js"
            ],
            "tsConfig": "tsconfig.app.json",
            "inlineStyleLanguage": "scss",
            "assets": [
              {
                "glob": "**/*",
                "input": "public"
              }
            ],
            "styles": [
              "src/styles.scss",
              "src/styles/spartacus/customer-ticketing.scss"
            ],
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ],
              "sass": {
                "silenceDeprecations": [
                  "import"
                ]
              }
            }
          },
          "configurations": {
            "production": {
              "budgets": [
                {
                  "type": "initial",
                  "maximumWarning": "500kB",
                  "maximumError": "3.5mb"
                },
                {
                  "type": "anyComponentStyle",
                  "maximumWarning": "4kB",
                  "maximumError": "8kB"
                }
              ],
              "outputHashing": "all"
            },
            "development": {
              "optimization": false,
              "extractLicenses": false,
              "sourceMap": true
            }
          },
          "defaultConfiguration": "production"
        },
        "serve": {
          "builder": "@angular/build:dev-server",
          "configurations": {
            "production": {
              "buildTarget": "schematics-test:build:production"
            },
            "development": {
              "buildTarget": "schematics-test:build:development"
            }
          },
          "defaultConfiguration": "development"
        },
        "test": {
          "builder": "@angular/build:unit-test",
          "options": {
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ]
            },
            "styles": [
              "src/styles/spartacus/customer-ticketing.scss"
            ]
          }
        }
      }
    }
  }
}"
`;
